[gd_scene load_steps=4 format=3 uid="uid://b0f4a5nl2jjl2"]

[ext_resource type="Theme" uid="uid://bsgj6bos7rqas" path="res://menus/button_theme_01.tres" id="1_83qjl"]
[ext_resource type="Script" uid="uid://cxphptqssyocr" path="res://scripts/settings_menu.gd" id="1_v0bl3"]
[ext_resource type="AudioStream" uid="uid://b0g1qoa26mqc3" path="res://audio/sfx/click/click (1).wav" id="2_n4a8d"]

[node name="SettingsMenu" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v0bl3")
hover_sound = ExtResource("2_n4a8d")
hover_volume = -20.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 27.58
offset_right = 1327.0
offset_bottom = 1048.58
theme = ExtResource("1_83qjl")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
z_index = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 0.178
anchor_top = 0.13800001
anchor_right = 0.665
anchor_bottom = 0.6209491
offset_left = -42.205994
offset_top = -92.47801
offset_right = 165.95502
offset_bottom = 298.43103

[node name="Header" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_83qjl")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GodModeToggle" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_83qjl")
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
text = "God mode"

[node name="MasterLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="OKButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_83qjl")
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
text = "OK"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
